force-app/main/default/objects/Tipo_Pagamento_Dettaglio__c/Tipo_Pagamento_Dettaglio__c.object-meta.xml
<CustomObject>
    <label>Schema di fatturazione Dettaglio</label>
    <nameField>
        <label>Tipo Pagamento Dettaglio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipo Pagamento Dettagli</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>