force-app/main/default/objects/Tipo_Pagamento_Dettaglio__c/fields/Descrizione__c.field-meta.xml
<CustomField>
    <fullName>Descrizione__c</fullName>
    <label>Descrizione</label>
    <type>TextArea</type>
</CustomField>