force-app/main/default/objects/Tipo_Pagamento_Dettaglio__c/fields/Numero_Canoni__c.field-meta.xml
<CustomField>
    <fullName>Numero_Canoni__c</fullName>
    <label>Numero Canoni</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>