force-app/main/default/objects/Tipo_Pagamento_Dettaglio__c/fields/Tipo_Pagamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Pagamento__c</fullName>
    <label>Schema di fatturazione</label>
    <referenceTo>Tipo_Pagamento__c</referenceTo>
    <relationshipLabel>Schema di fatturazione Dettagli</relationshipLabel>
    <relationshipName>Tipo_Pagamento_Dettagli</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>