force-app/main/default/objects/Tipo_Pagamento_Dettaglio__c/fields/Unit_di_misura__c.field-meta.xml
<CustomField>
    <fullName>Unit_di_misura__c</fullName>
    <label>Unità di misura (Mensile)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>