force-app/main/default/objects/Tipo_Pagamento_Dettaglio__c/fields/Valore__c.field-meta.xml
<CustomField>
    <fullName>Valore__c</fullName>
    <label>Valore %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>