force-app/main/default/objects/Tipo_Pagamento_Dettaglio__c/fields/Valore_Canone__c.field-meta.xml
<CustomField>
    <fullName>Valore_Canone__c</fullName>
    <label>Valore Canone</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>