force-app/main/default/objects/Tipo_Pagamento_Dettaglio__c/recordTypes/NexusRecursive.recordType-meta.xml
<RecordType>
    <fullName>NexusRecursive</fullName>
    <active>true</active>
    <label>Nexus Recursive</label>
</RecordType>