force-app/main/default/objects/Tipo_Pagamento_Dettaglio__c/recordTypes/One_Shoot.recordType-meta.xml
<RecordType>
    <fullName>One_Shoot</fullName>
    <active>true</active>
    <label>One Shot</label>
</RecordType>