force-app/main/default/objects/Tipo_Pagamento_Dettaglio__c/recordTypes/Ricorsivo.recordType-meta.xml
<RecordType>
    <fullName>Ricorsivo</fullName>
    <active>true</active>
    <label>Recursive</label>
</RecordType>